added EJS files for customers workflow, and the route handlers for these EJS files

--- a/views/restaurant_menu.ejs
+++ b/views/restaurant_menu.ejs
@@ -13,9 +13,9 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>Menu for five guys!</h1>
 
-    <a class="btn btn-primary" href="/users/login">Get Started!</a>
+    <a class="btn btn-primary" href="/order_review">Checkout</a>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
