--- a/views/order_review.ejs
+++ b/views/order_review.ejs
@@ -13,9 +13,8 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
-
-    <a class="btn btn-primary" href="/users/login">Get Started!</a>
+    <h1>Review your order</h1>
+    <a class="btn btn-primary">Place order</a>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
