--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -13,9 +13,19 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>Please log in or sign up!</h1>
 
-    <a class="btn btn-primary" href="/users/login">Get Started!</a>
+    <form class="form-inline" action="/customers/login" method="POST">
+      <div class="form-group mb-2">
+        <label for="email">Enter E-mail:</label>
+        <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+        <label for="password">Enter password:</label>
+        <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+        <button type="submit" class="btn btn-primary">Login</button>
+      </div>
+    </form>
+    <a href="/users/signup">Sign up</a>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
