--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -13,9 +13,18 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>Sign up!</h1>
 
-    <a class="btn btn-primary" href="/users/login">Get Started!</a>
+    <form class="form-inline" action="/users" method="POST">
+      <div class="form-group mb-2">
+        <label for="email">Enter E-mail:</label>
+        <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+        <label for="password">Enter password:</label>
+        <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </div>
+    </form>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
