--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -27,9 +27,9 @@
         <form action="/customers/login" method="POST">
           <div class="form-group mb-2">
             <label for="email">Enter E-mail:</label>
-            <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+            <input class="form-control" type="email" name="email">
             <label for="password">Enter password:</label>
-            <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+            <input class="form-control" type="password" name="password">
             <button type="submit" class="btn btn-primary">Login</button>
           </div>
         </form>
@@ -40,9 +40,9 @@
         <form action="/customers/login" method="POST">
           <div class="form-group mb-2">
             <label for="email">Enter E-mail:</label>
-            <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+            <input class="form-control" type="email" name="email">
             <label for="password">Enter password:</label>
-            <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+            <input class="form-control" type="password" name="password">
             <button type="submit" class="btn btn-primary">Login</button>
           </div>
         </form>
