--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -13,14 +13,21 @@
   </head>
 
   <body>
+    <%- include('./partials/_header') %>
     <h1>Sign up!</h1>
 
-    <form class="form-inline" action="/users" method="POST">
+    <form action="/users" method="POST">
       <div class="form-group mb-2">
-        <label for="email">Enter E-mail:</label>
-        <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+        <label for="email">Enter Email:</label>
+        <input class="form-control" type="email" name="email">
         <label for="password">Enter password:</label>
-        <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+        <input class="form-control" type="password" name="password">
+        <label>Re-enter password:</label>
+        <input class="form-control" type="password" name="re-enter-password">
+        <label>Name:</label>
+        <input class="form-control" type="text" name="user-name">
+        <label>Phone Number:</label>
+        <input class="form-control" type="tel" name="phone">
         <button type="submit" class="btn btn-primary">Sign Up</button>
       </div>
     </form>
