--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/userLogin.js"></script>
   </head>
 
   <body>
@@ -24,20 +24,21 @@
     <div class="tab-content" id="login-tabContent">
       <div class="tab-pane fade show active" id="customer-login" role="tabpanel" aria-labelledby="pills-home-tab">
         <h3>Customer Login</h3>
-        <form action="/customers/login" method="POST">
+        <form class="customer-login" action="/customers/login" method="POST">
           <div class="form-group mb-2">
             <label for="email">Enter E-mail:</label>
-            <input class="form-control" type="email" name="email">
+            <input class="form-control email" type="email" name="email">
             <label for="password">Enter password:</label>
-            <input class="form-control" type="password" name="password">
+            <input class="form-control password" type="password" name="password">
             <button type="submit" class="btn btn-primary">Login</button>
           </div>
         </form>
+        <span class="missing-fields-error-message">Please fill out both the email and password</span>
         <p>Don't have an account yet? <a href="/users/signup">Sign up</a></p>
       </div>
       <div class="tab-pane fade" id="restaurant-login" role="tabpanel" aria-labelledby="pills-home-tab">
         <h3>Restaurant Login</h3>
-        <form action="/customers/login" method="POST">
+        <form class="restaurant-login" action="/customers/login" method="POST">
           <div class="form-group mb-2">
             <label for="email">Enter E-mail:</label>
             <input class="form-control" type="email" name="email">
