removed ajax request on sign up/register form submit

--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -26,7 +26,7 @@
         <span class="password-match-error-message">password does not match!</span>
         <input class="form-control re-enter-password" type="password" name="re-enter-password">
         <label>Name:</label>
-        <input class="form-control user-name" type="text" name="user-name">
+        <input class="form-control user-name" type="text" name="name">
         <label>Phone Number:</label>
         <input class="form-control phone" type="tel" name="phone">
         <button type="submit" class="btn btn-primary">Sign Up</button>
