--- a/styles/restaurant-portal.scss
+++ b/styles/restaurant-portal.scss
@@ -1,53 +1,74 @@
-#orders-container {
-  padding: 20px;
-  margin: 20px;
-  font-family: ‘Ibarra Real Nova’, serif;
-  top: 30px;
-  position: relative;
+body {
+  background-color: !important;
 
-  form {
-    label {
+  #orders-container {
+
+    padding: 20px;
+    margin: 20px;
+    font-family: ‘Ibarra Real Nova’, serif;
+    top: 30px;
+    position: relative;
+
+    .card {
+      border: 2px solid ;
+      border-radius: 20px;
       margin: 5px;
+
+      .card-header {
+        .btn {
+          p {
+            font-size: 20px;
+            font-weight: bold;
+          }
+        }
+      }
     }
-    select {
-      margin: 5px;
+
+    form {
+      label {
+        margin: 5px;
+      }
+      select {
+        margin: 5px;
+      }
+      button {
+        margin: 5px;
+      }
     }
-    button {
-      margin: 5px;
+
+    .collapse {
+      padding: 10px;
+      // display: flex;
+      // justify-content: space-between;
     }
-  }
 
-  .collapse {
-    padding: 10px;
-    // display: flex;
-    // justify-content: space-between;
-  }
-
-  .order-body {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  ul {
-    list-style: none;
-  }
-
-  #incoming-orders-accordion {
-    margin: 10px;
-    .wait-time-form {
+    .order-body {
       display: flex;
       justify-content: space-between;
     }
+
+    ul {
+      list-style: none;
+    }
+
+    #incoming-orders-accordion {
+      margin: 10px;
+      .wait-time-form {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+
+    #accepted-orders-accordion {
+      margin: 10px;
+    }
   }
 
-  #accepted-orders-accordion {
-    margin: 10px;
+  nav.orders-nav {
+    position: fixed;
+    z-index: 1;
   }
-}
 
-nav.orders-nav {
-  position: fixed;
-  z-index: 1;
 }
 
 html {
