--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -38,7 +38,7 @@
       </div>
       <div class="tab-pane fade" id="restaurant-login" role="tabpanel" aria-labelledby="pills-home-tab">
         <h3>Restaurant Login</h3>
-        <form class="restaurant-login" action="/customers/login" method="POST">
+        <form class="restaurant-login" action="/restaurants/login" method="POST">
           <div class="form-group mb-2">
             <label for="email">Enter E-mail:</label>
             <input class="form-control" type="email" name="email">
