--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,3 +1,15 @@
 header {
-  background-color: royalblue;
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+  font-family: 'Oswald', sans-serif;
+
+  .navbar-dark .navbar-brand {
+
+    color: black;
+  }
+  .navbar-dark .navbar-nav .nav-link {
+    color: black;
+  }
 }
