--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -5,12 +5,6 @@ html {
 body {
   background-color: white;
 }
-header {
-  position: fixed;
-  width: 100%;
-  z-index: 10;
-  font-family: 'Oswald', sans-serif;
-}
 main{
   font-family: 'Ibarra Real Nova', serif;
 }
@@ -55,7 +49,7 @@ ul {
 .red-section {
   width: 100vw;
   height: 100vh;
-  background: url(/styles/red-image.jpg);
+  background: url(/images/red-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
