--- a/views/restaurant_menu.ejs
+++ b/views/restaurant_menu.ejs
@@ -27,8 +27,7 @@
   <main>
   <div class = "container1">
 
-
-    <section class = "red-section">
+    <section class = "red-section shadow">
 
       <span class = "caption1">Handcrafted</span>
       <span class = "caption2">BURGERS & FRIES</span>
@@ -41,7 +40,7 @@ keyboard_arrow_down
 
     <div class = "main-section">
 
-      <div id="menu" class = "menu-section shadow">
+      <div id="menu" class = "menu-section">
         <p class="category"> Entrees </p>
         <ul>
           <% for(let food of menu) { %>
@@ -65,63 +64,6 @@ keyboard_arrow_down
           <% } %>
         </ul>
     </div>
-
-
-    <div id="menu3" class = "menu-section shadow">
-        <p class="category"> Beverages </p>
-        <ul>
-          <% for(let food of menu) { %>
-            <li>
-              <div class = "each-item">
-                <div class = "food-item">
-                <strong class="food-name"><%= food.name %></strong>
-                <em> $<%= food.price/100 %>.00</em>
-                <% if (food.is_popular) { %>
-                <span>🔥</span>
-                <% } %>
-                <p class="item-description"> <%= food.description %></p>
-              </div>
-                <div class="def-number-input number-input safari_only">
-                  <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus quant-button"></button>
-                  <input class="quantity <%= food.id %>" min="0" name="<%= food.id %>-quantity" value="0" type="number">
-                  <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus quant-button"></button>
-                </div>
-              </div>
-            </li>
-          <% } %>
-        </ul>
-    </div>
-
-
-    <div id="menu2" class = "menu-section shadow">
-        <p class="category"> Sides </p>
-        <ul>
-          <% for(let food of menu) { %>
-            <li>
-              <div class = "each-item">
-                <div class = "food-item">
-                <strong class="food-name"><%= food.name %></strong>
-                <em> $<%= food.price/100 %>.00</em>
-                <% if (food.is_popular) { %>
-                <span>🔥</span>
-                <% } %>
-                <p class="item-description"> <%= food.description %></p>
-              </div>
-                <div class="def-number-input number-input safari_only">
-                  <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus quant-button"></button>
-                  <input class="quantity <%= food.id %>" min="0" name="<%= food.id %>-quantity" value="0" type="number">
-                  <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus quant-button"></button>
-                </div>
-              </div>
-            </li>
-          <% } %>
-        </ul>
-    </div>
-
-
-
-
-
   </div>
   </div>
  </main>
