--- a/styles/restaurant-portal.scss
+++ b/styles/restaurant-portal.scss
@@ -20,6 +20,10 @@ body {
             font-size: 20px;
             font-weight: bold;
           }
+          span {
+            font-weight: bold;
+            font-style: italic;
+          }
         }
       }
     }
