--- a/styles/header.scss
+++ b/styles/header.scss
@@ -2,14 +2,40 @@ header {
   background-color: white;
   position: fixed;
   width: 100%;
+  height: 8vh;
+  padding: 20px 50px;
   z-index: 10;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
 
-  .navbar-dark .navbar-brand {
+ a {
+  text-decoration: none;
+  color: #da0d0d;
+ }
+ a:hover{
+  color: black;
+  text-decoration: none;
+}
+  .get-started-link{
+    height: 30px;
+    width: 93px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
+      font-family: 'Oswald', sans-serif;
+      color: black;
+    }
 
-    color: black;
+    a:hover{
+      text-decoration: none;
+      transition: all 0.1s;
+      font-size: 1.05em;
+      color: black;
+    }
   }
-  .navbar-dark .navbar-nav .nav-link {
-    color: black;
-  }
+
+
 }
