--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,14 +1,9 @@
 <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark shadow-lg">
-    <a class="navbar-brand" href="/">Food Ordering</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/users/login">Get Started!</a>
-      </div>
-    </div>
-  </nav>
+<header class="shadow-lg">
+  <a href="/"> <span>FOOD ORDERING</span></a>
+  <% if(!user) {%>
+  <span class="get-started-link"><a href="/users/login">Get Started</a></span>
+  <% } else {%>
+    <span class="get-started-link"><a href="/users/login">Get Started</a></span>
+  <% }%>
 </header>
