--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,6 +1,7 @@
 header {
   background-color: white;
   position: fixed;
+  top:0;
   width: 100%;
   height: 8vh;
   padding: 20px 50px;
@@ -15,7 +16,7 @@ header {
   color: #da0d0d;
  }
  a:hover{
-  color: black;
+  color: #da0d0d;
   text-decoration: none;
 }
   .get-started-link{
@@ -35,7 +36,22 @@ header {
       font-size: 1.05em;
       color: black;
     }
-  }
 
+  }
+  .account {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    i {
+      font-size: 40px;
+
+    }
+    a{
+      color:black;
+    }
+   .name {
+     margin-left: 20px;
+   }
+  }
 
 }
