--- a/styles/order_review.scss
+++ b/styles/order_review.scss
@@ -1,16 +1,20 @@
-header {
-  width: 100%;
-  z-index: 10;
-  font-family: 'Oswald', sans-serif;
-  background-color: brown;
+
+.review {
+  margin-top: 120px;
+  margin-bottom: 0px;
+  text-align: center;
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 40px;
+  color:#981818
 }
-body {
-  background-color: #fff;
-}
+
 main{
-  font-family: 'Ibarra Real Nova', serif;
-  margin-top: 10vh;
+  // font-family: 'Ibarra Real Nova', serif;
+  font-family: 'Merriweather', serif;
   display: flex;
+  margin-top: 5vh;
+  padding: 0px 100px;
+  background-color:#981818;
 }
 
 .container1 {
@@ -24,31 +28,53 @@ main{
 article {
   background-color:#E5DCC5;
   padding:20px;
-  margin:20px;
+  margin:50px;
+  border-radius: 10px;
+
+  font-weight: normal
 }
 h2 {
   text-align: center;
   border-bottom: 2px solid black;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
 ul {
   list-style-type: none;
 }
 .ul-order {
-  padding:15px;
+  padding:30px;
+  padding-bottom: 40px;
+  padding-top: 15px;
+  border-bottom: 2px solid black
 }
+
+.num {
+  display:flex;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 90px;
+}
+
 .numberCircle {
   margin-left: 30px;
   border-radius: 50%;
-  width: 22px;
-  height: 22px;
+  width: 25px;
+  height: 23px;
   padding: 0px;
-  border: 0.5px solid black;
-  background-color: black;
+  border: 0.5px solid #352e2e;
+  background-color: #352e2e;
   color: white;
   text-align: center;
-  font-size: 15.5px;
+  font-size: 15px;
   display: inline-block;
+}
+
+.items {
+  border-bottom: 2px solid black;
+ li {
+   margin:20px;
+ }
 }
 .item {
   display: inline-block;
@@ -58,14 +84,27 @@ ul {
 .checkout {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  padding-top: 18px;
+  border-top: 2px solid black;
+  .total-amount {
+    font-family: 'Archivo Black', sans-serif!important;
+    font-size:25px;
+    color:#a72727;
+  }
 }
 .place-order {
   width:200px;
   color:white!important;
   padding: 5px;
-
+  background-color: #a72727;
+  border-color: #a72727;
 }
 
-
-
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
