--- a/styles/root.scss
+++ b/styles/root.scss
@@ -72,3 +72,12 @@
     width: 100px;
   }
 }
+
+.invisible {
+  opacity:0;
+
+}
+
+.show1, .show2, .show3, .show4, .show5 {
+  transition: all 1s;
+}
