fixed the bug that the username does not change when  logged out

--- a/styles/root.scss
+++ b/styles/root.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   color: black;
-  padding-top: 230px;
+  padding-top: 29vh;
 
   .caption1 {
     font-family: 'Merriweather', serif;
