--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 <header class="shadow-lg">
-  <a href="/"> <span>FOOD ORDERING</span></a>
+  <a class="home" href="/"> <span>FOOD ORDERING</span></a>
   <% if(!user) {%>
   <span class="get-started-link"><a href="/users/login">Get Started</a></span>
   <% } else {%>
