--- a/styles/header.scss
+++ b/styles/header.scss
@@ -3,14 +3,18 @@ header {
   position: fixed;
   top:0;
   width: 100%;
-  height: 10vh;
+  height: 9vh;
   padding: 20px 50px;
   z-index: 10;
   font-family: 'Archivo Black', sans-serif;
   font-size: 20px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
+.home {
+  font-size:23px;
+}
  a {
   text-decoration: none;
   color: #da0d0d;
