--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -106,7 +106,6 @@ ul {
   }
 
 }
-
 .cart {
   .item-in-cart {
     padding:0px 30px;
@@ -114,7 +113,8 @@ ul {
     justify-content: space-between;
   }
   .total-in-cart {
-    padding-top: 10px; width: 100%; bp: 1px solid; text-align:center;
+    padding-top: 10px; width: 100%;
+    border-top: 1px solid; text-align:center;
   }
 }
 
