changed the margin for the username and icon in the header

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -42,6 +42,10 @@ header {
     }
 
   }
+
+  .dropdown {
+    margin-left: 7.5px;
+  }
   .account {
     display: flex;
     justify-content: center;
