--- a/styles/order_review.scss
+++ b/styles/order_review.scss
@@ -1,6 +1,9 @@
-
+body {
+  height:91vh;
+  width:100vw;
+  margin-top:14.5vh;
+}
 .review {
-  margin-top: 120px;
   margin-bottom: 0px;
   text-align: center;
   font-family: 'Archivo Black', sans-serif;
