changed text and sizing of the boxes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
   <body>
       <%- include('./partials/_header') %>
-
+    <div class="red-container">
       <section class = "red-section shadow">
 
           <span class = "invisible show1 caption1">Order your food</span>
@@ -43,6 +43,7 @@
             <a href="" class = "click-icon"><img src="/images/github.png" alt="" ></a>
           </div>
          </section>
+        </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
