--- a/views/order_confirmation.ejs
+++ b/views/order_confirmation.ejs
@@ -23,8 +23,8 @@
     <main>
 
         <section class = "red-section shadow">
-            <span class = "invisible show1 caption2">Thank You</span>
-            <span class = "invisible show1 caption1">Order Successfully Placed!</span>
+            <span class = "invisible show1 caption2">Thank You!</span>
+            <span class = "invisible show1 caption1">Order Successfully Placed</span>
             <div class="invisible show2 continue">
             <span class = "show menu-text">Continue Shopping</span>
             <a href="/restaurants/Five%20Guys"><i class="show material-icons cart">
