--- a/styles/root.scss
+++ b/styles/root.scss
@@ -1,14 +1,20 @@
+.red-container {
+  height:91vh;
+  width:100vw;
+  margin-top:9vh;
+}
 .red-section {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: url(/images/food-background.png);
   background-size: 100% 100%;;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   color: black;
-  padding-top: 28vh;
+  padding-top:10vh;
 
   .caption1 {
     font-family: 'Merriweather', serif;
