--- a/views/restaurant_portal.ejs
+++ b/views/restaurant_portal.ejs
@@ -11,6 +11,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Merriweather&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|Oswald&display=swap" rel="stylesheet">
+
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script>const orders = '<%- JSON.stringify(orders) %>'</script>
   <script type="text/javascript" src="/scripts/restaurantPortal.js"></script>
@@ -30,6 +36,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link incoming orders active" href="#incoming-orders-section">Incoming Orders</a>
         <a class="nav-item nav-link accepted-orders" href="#accepted-orders-section">Accepted Orders</a>
+        <a type="button" class="nav-item nav-link completed-orders">Completed Orders</a>
       </div>
     </div>
   </nav>
