--- a/styles/login.scss
+++ b/styles/login.scss
@@ -7,6 +7,10 @@ body {
     top: 54px;
     font-family: 'Archivo Black', sans-serif;
     width: 50%;
+    display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
 
     .login-tab {
       width: 400px;
@@ -20,6 +24,8 @@ body {
           margin: 30px;
         }
         text-align: center;
+        display: flex;
+        justify-content: center;
       }
 
       .tab-content {
