fixed bug for location reload, styled portal

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -17,10 +17,10 @@ header {
 }
  a {
   text-decoration: none;
-  color: #da0d0d;
+  color: #981818;
  }
  a:hover{
-  color: #da0d0d;
+  color: #981818;
   text-decoration: none;
 }
   .get-started-link{
