--- a/styles/restaurant-portal.scss
+++ b/styles/restaurant-portal.scss
@@ -1,18 +1,23 @@
 body {
-  background-color: !important;
+  background-color: #981818!important;
+
+  h2 {
+    color:white;
+  }
 
   #orders-container {
 
     padding: 20px;
     margin: 20px;
     font-family: 'Archivo Black', sans-serif;
-    top: 30px;
+    margin:10vh 12vw;
     position: relative;
 
     .card {
-      border: 2px solid ;
+      // border: 2px solid ;
       border-radius: 20px;
-      margin: 5px;
+      margin: 30px;
+      font-size:17px;
 
       .card-header {
         .btn {
@@ -26,6 +31,7 @@ body {
             display: block;
             text-align: left;
           }
+
         }
       }
     }
@@ -51,10 +57,18 @@ body {
     .order-body {
       display: flex;
       justify-content: space-between;
+      .card-body ul li {
+        color:#981818;
+        font-size: 1.5em;
+      }
     }
 
     ul {
       list-style: none;
+      li {
+        color:#981818;
+        font-size: 1.5em;
+      }
     }
 
     #incoming-orders-accordion {
@@ -72,7 +86,9 @@ body {
 
   nav.orders-nav {
     position: fixed;
-    z-index: 1;
+    // z-index: 2000;
+    margin-top:1.8vh;
+    background-color:white!important;
   }
 
   button.complete {
@@ -80,6 +96,14 @@ body {
     height: 38px;
   }
 
+}
+
+.nav-item {
+  font-family: 'Archivo Black', sans-serif;
+}
+
+.navbar-brand {
+  font-family: 'Archivo Black', sans-serif;
 }
 
 html {
