new image for completed order page

--- a/styles/restaurant-portal.scss
+++ b/styles/restaurant-portal.scss
@@ -86,7 +86,7 @@ body {
 
   nav.orders-nav {
     position: fixed;
-    // z-index: 2000;
+    z-index: 2000;
     margin-top:1.8vh;
     background-color:white!important;
   }
